# RuleWeaver

./: .env.example  .gitattributes  .gitignore  .prettierignore  AUDIT_LOG.md  LICENSE  PHASE_2_QUALITY_REVIEW.md  PLAN.md  PLAN_HARDEN.md  README.md  SECURITY_REMEDIATION.md  USER_GUIDE.md  architecture.md  build  build-quick  build-quick.bat  build.bat  clippy_output.txt  comments.json  depth_plan.md  dev  dev.bat  eslint.config.js  index.html  lint_output.txt  package-lock.json  package.json  pr_context.diff  roadmap.md  rust_test_results.txt  tarpaulin.toml  vite.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
docs/: MIGRATION.md  PARITY.md  SUPPORT_MATRIX.md  ai-tools-commands-reference.md  release-notes-import-followup.md  slash-command-migration-guide.md
docs/depth/: depth_plan.md  issue-31-canonical-registry.md  issue-39-reconciliation-engine.md  issue-41-path-resolution-invariants.md  issue-43-slash-lifecycle.md  issue-45-skills-distribution.md  issue-46-docs-truthfulness.md  issue-47-unified-status-repair.md  issue-new-command-reliability-safety.md  issue-new-conflict-determinism.md  issue-new-import-parity.md
plans/: issue-41-39-path-resolution-reconciliation.md
public/: version.json
scripts/: rename-installer  rename-installer.bat  set-version  set-version.bat
src/: App.tsx  index.css
src-tauri/: Cargo.toml  clippy_test_output.txt  tauri.conf.json  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  error.rs  execution.rs  feature_flags.rs  lib.rs  main.rs  redaction.rs
src-tauri/src/commands/: adapters.rs  command_commands.rs  import_commands.rs  mcp_commands.rs  migration_commands.rs  mod.rs  reconciliation_commands.rs  registry_commands.rs  rule_commands.rs  skill_commands.rs  system_commands.rs
src-tauri/src/database/: mod.rs
src-tauri/src/file_storage/: migration.rs  mod.rs  parser.rs  serializer.rs  skills.rs  watcher.rs
src-tauri/src/mcp/: mod.rs  watcher.rs
src-tauri/src/models/: command.rs  config.rs  import.rs  mod.rs  parse_error.rs  reconciliation.rs  registry.rs  rule.rs  skill.rs  timestamp.rs
src-tauri/src/path_resolver/: mod.rs
src-tauri/src/reconciliation/: formatter.rs  mod.rs
src-tauri/src/rule_import/: mod.rs
src-tauri/src/slash_commands/: adapters.rs  adapters_test.rs  commands.rs  mod.rs  sync.rs  sync_test.rs
src-tauri/src/status/: commands.rs  mod.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/templates/: code_review_instructions.md  commands.rs  mod.rs  plan.py  plan_instructions.md  review.py  rules.rs  skills.rs  sysinfo.ps1  sysinfo_instructions.md  write.py  write_instructions.md
src-tauri/tests/: lifecycle_commands.rs  lifecycle_import.rs  lifecycle_rules.rs  lifecycle_skills.rs  registry_path_matrix.rs
src-tauri/tests/common/: mod.rs
src/__tests__/components/: badge.test.tsx  button.test.tsx
src/__tests__/hooks/: useCommandsState.test.ts
src/__tests__/lib/: collection-utils.test.ts  tauri.test.ts  (+2 more)
src/constants/: timing.ts
src/hooks/: useCommandsState.ts  useKeyboardShortcuts.ts  useMcpWatcher.ts  useRepositoryRoots.ts  useSettingsState.ts  useToolRegistry.ts
src/lib/: collection-utils.ts  featureManager.ts  tauri.ts  toast-helpers.ts  utils.ts
src/stores/: mcpStore.ts  registryStore.ts  rulesStore.ts
src/test/: setup.ts
src/types/: command.ts  rule.ts  skill.ts  status.ts
(+55 files in other folders)
