[package]
name = "ruleweaver"
version = "0.1.0"
description = "A unified desktop app for managing AI coding assistant rules and configurations"
authors = ["ChrisUFO"]
edition = "2021"

[lib]
name = "ruleweaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
