[package]
name = "ruleweaver"
version = "0.1.0"
description = "A unified desktop app for managing AI coding assistant rules and configurations"
authors = ["ChrisUFO"]
edition = "2021"

[[bin]]
name = "ruleweaver"
path = "src/main.rs"

[[bin]]
name = "ruleweaver-mcp"
path = "src/bin/mcp-server.rs"

[lib]
name = "ruleweaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde_yaml = "0.9"
notify = "6"
glob = "0.3"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
toml = "0.8"
